syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create (CreateRequest) returns (CreateResponse) {};
  rpc Get (GetRequest) returns (GetResponse) {};
  rpc Update (UpdateRequest) returns (UpdateResponse) {};
  rpc Delete (DeleteRequest) returns (DeleteResponse) {};
}

enum Role {
  USER = 0;
  ADMIN = 1;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
}

message UserInfo {
  string name = 1;
  string email = 2;
  Role role = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message UpdateResponse {
  google.protobuf.Empty empty = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message DeleteResponse {
  google.protobuf.Empty empty = 1;
}
